update the test task for java 1.8